refactored home link to fix IE overlap issue

--- a/src/components/StickySection/StickySection.css
+++ b/src/components/StickySection/StickySection.css
@@ -31,15 +31,24 @@
   line-height: 40px;
   text-align: center;
   background-color: rgb(77, 211, 218);
+  cursor: pointer;
 }
 
-.gohomelink {
+.gohomebutton {
   display: block;
   font-size: 13px;
   font-weight: 700;
   color: #000;
   width: 180px;
+  background: rgb(77, 211, 218);
+  border: none;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  outline: none;
 }
+
+.gohomebutton:hover { cursor: pointer; outline: none; }
+.gohomebutton:active { outline: none; }
 
 .scrolltop {
   position: absolute;
@@ -55,7 +64,7 @@
 }
 
 .iconup {
-  font-family: 'lobo' !important;
+  font-family: 'lobo', Helvetica, Arial, sans-serif !important;
   line-height: 40px;
   text-align: center;
   color: #fff;
@@ -65,7 +74,7 @@
 
 .iconup:before {
   content: 'k';
-  font-family: "lobo" !important;
+  font-family: 'lobo', Helvetica, Arial, sans-serif !important;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
